Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-34606

Test (and possibly fix) behavior around majority commit point and oplog truncation

    • Fully Compatible
    • v4.0
    • Storage NYC 2018-06-04, Storage NYC 2018-06-18, Storage NYC 2018-07-02

      First step here is that we need to add a js test for the behavior when replication majority commit point stops the oplog being truncated.

      Depending on what that test turns up, there might be follow-on work to improve that behavior.

            Assignee:
            maria.vankeulen@mongodb.com Maria van Keulen
            Reporter:
            ian@mongodb.com Ian Whalen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: