SERVER-34606 Early return from majority commit point oplog truncation