src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -196,7 +196,16 @@ void WiredTigerRecordStore::OplogStones::awaitHasExcessStonesOrDead() {
             MONGO_IDLE_THREAD_BLOCK;
             stdx::lock_guard<stdx::mutex> lk(_mutex);
             if (hasExcessStones_inlock()) {
-                break;
+                auto lastStableCheckpointTimestamp = _rs->getLastStableCheckpointTimestamp();
+                auto persistedTimestamp = lastStableCheckpointTimestamp
+                    ? *lastStableCheckpointTimestamp
+                    : Timestamp::min();
+                auto stone = _stones.front();
+                invariant(stone.lastRecord.isNormal());
+                if (static_cast<std::uint64_t>(stone.lastRecord.repr()) <
+                    persistedTimestamp.asULL()) {
+                    break;
+                }
             }
         }
         _oplogReclaimCv.wait(lock);
@@ -941,6 +950,10 @@ int64_t WiredTigerRecordStore::cappedDeleteAsNeeded(OperationContext* opCtx,
     }
 
     return cappedDeleteAsNeeded_inlock(opCtx, justInserted);
+}
+
+boost::optional<Timestamp> WiredTigerRecordStore::getLastStableCheckpointTimestamp() const {
+    return _kvEngine->getLastStableCheckpointTimestamp();
 }
 
 void WiredTigerRecordStore::_positionAtFirstRecordId(OperationContext* opCtx,
