src/mongo/db/storage/wiredtiger/wiredtiger_record_store.h
@@ -189,6 +189,8 @@ public:
         return true;
     }
 
+    virtual boost::optional<Timestamp> getLastStableCheckpointTimestamp() const final;
+
     virtual Status compact(OperationContext* opCtx,
                            RecordStoreCompactAdaptor* adaptor,
                            const CompactOptions* options,
